[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/clr2.png" type="Texture" id=1]
[ext_resource path="res://sprites/clr.png" type="Texture" id=2]
[ext_resource path="res://scenes/spriteEditor.gd" type="Script" id=3]
[ext_resource path="res://sprites/floppy.png" type="Texture" id=4]
[ext_resource path="res://sprites/new.png" type="Texture" id=5]
[ext_resource path="res://sprites/pixxiblyaxolotl.ttf" type="DynamicFontData" id=6]

[sub_resource type="TileSet" id=1]
0/name = "clr.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "clr2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.968627, 0.968627, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.968627, 0.0784314, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 0.592157, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.901961, 0.831373, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.627451, 0.878431, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.27451, 0.733333, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.662745, 0.541176, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.976471, 0.666667, 0.686275, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.670588, 0.2, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.215686, 0.580392, 0.431373, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.164706, 0.27451, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.486275, 0.552941, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.760784, 0.745098, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.458824, 0.443137, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.243137, 0.239216, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
expand_margin_left = 11.0
expand_margin_right = 11.0

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.117647, 0.12549, 0.145098, 1 )

[sub_resource type="DynamicFont" id=23]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 23 )
Button/styles/disabled = SubResource( 20 )
Button/styles/focus = SubResource( 20 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 20 )
Button/styles/pressed = SubResource( 20 )
WindowDialog/styles/panel = SubResource( 21 )

[node name="spriteEditor" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1271.0
margin_bottom = 795.0
color = Color( 0.117647, 0.12549, 0.145098, 1 )

[node name="editField" type="TileMap" parent="."]
position = Vector2( 16, 15 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0 )

[node name="preview" type="TileMap" parent="."]
position = Vector2( 16, 472 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 135.0
margin_top = 472.0
margin_right = 463.0
margin_bottom = 554.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 328.0
margin_bottom = 41.0
custom_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 82.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 123.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 164.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )

[node name="Button6" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 205.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )

[node name="Button7" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 205.0
margin_right = 246.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )

[node name="Button8" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 246.0
margin_right = 287.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )

[node name="Button9" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 328.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 328.0
margin_bottom = 82.0
custom_constants/separation = 0

[node name="Button10" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )

[node name="Button11" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 41.0
margin_right = 82.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )

[node name="Button12" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 82.0
margin_right = 123.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 14 )

[node name="Button13" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 123.0
margin_right = 164.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )

[node name="Button14" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 164.0
margin_right = 205.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )

[node name="Button15" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 205.0
margin_right = 246.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 17 )

[node name="Button16" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 246.0
margin_right = 287.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 18 )

[node name="Button17" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 287.0
margin_right = 328.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 41 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 19 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 135.0
margin_top = 558.0
margin_right = 463.0
margin_bottom = 584.0

[node name="save" type="TextureButton" parent="HBoxContainer"]
margin_right = 26.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="new" type="TextureButton" parent="HBoxContainer"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 73.0
margin_top = 178.0
margin_right = 428.0
margin_bottom = 319.0
theme = SubResource( 22 )
popup_exclusive = true
window_title = ""
dialog_autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 347.0
margin_bottom = 111.0
focus_mode = 2
scroll_active = false
selection_enabled = true

[connection signal="pressed" from="HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/new" to="." method="_on_new_pressed"]
